Finished ironing out the bugs in the IBLT. Run IBLTTester.cpp as main file to see it in action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCE_FILES
         src/probCPISync.cpp
         src/SyncMethod.cpp
         src/UID.cpp
+        src/testFunctions.cpp
         src/murmurhash3.cpp
         src/utilstrencodings.cpp
         src/iblt.cpp
